<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gris">
        <ImageButton
            android:layout_margin="7dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/drawer"
            android:background="@drawable/ic_menu_white_24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/comite"
            android:textColor="@color/gris_clair"
            android:text="Comité de la\nTable Ronde"
            android:textSize="40dp"
            android:layout_margin="7dp"
            android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/infoc"
        android:id="@+id/infoc"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:layout_below="@+id/comite"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pres"
        android:id="@+id/contpres"
        android:layout_below="@+id/infoc"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vp"
        android:layout_marginLeft="10dp"
        android:id="@+id/contvpres"
        android:scrollbars="vertical"
        android:layout_below="@+id/contpres"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vpe"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:id="@+id/contvprese"
        android:layout_below="@+id/contvpres"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trez"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:id="@+id/tres"
        android:layout_below="@+id/contvprese"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/secr"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:id="@+id/sec"
        android:layout_below="@+id/tres"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/balef"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:id="@+id/balef"
        android:layout_below="@+id/sec"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/banq"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:id="@+id/banq"
        android:layout_below="@+id/balef"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/deco"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:id="@+id/deco"
        android:layout_below="@+id/banq"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/eco"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:id="@+id/eco"
        android:layout_below="@+id/deco"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/event"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:id="@+id/event"
        android:layout_below="@+id/eco"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/inpho"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:id="@+id/info"
        android:layout_below="@+id/event"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/org"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:id="@+id/organe"
        android:layout_below="@+id/info"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pcm"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:layout_below="@+id/organe"
        android:id="@+id/pcm"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rcp"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:id="@+id/rcp"
        android:layout_below="@+id/pcm"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lasc"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:id="@+id/lasc"
        android:layout_below="@+id/rcp"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sks"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:id="@+id/sks"
        android:layout_below="@+id/lasc"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bar"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        android:id="@+id/bar"
        android:layout_below="@+id/sks"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
        />
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/spons"
    android:layout_marginLeft="10dp"
    android:scrollbars="vertical"
        android:id="@+id/spon"
        android:layout_below="@+id/bar"
        android:textColor="@color/gris_clair"
        android:layout_margin="10dp"
    />
</RelativeLayout>
</android.support.v4.widget.NestedScrollView>
